# CPlantBox

./: .gitignore  1_cplantbox.ipynb  CMakeLists.txt  PLAN.md  first_example.rsml
.github/workflows/: build-wheels.yml  build_wheels.yml
docker/: Dockerfile.ubuntu-test-env
modelparameter/: rootsys2plant.py
scripts/: README.md  verify_wheel_install.py
scripts/macos/install/: install-wheel.sh
scripts/macos/test/: run_golden.sh  test-wheel.sh
scripts/ubuntu/: smoke_wheel.sh
src/: CMakeLists.txt  PyPlantBox.cpp
src/structural/: Leaf.h  MappedOrganism.h  Organ.cpp  Organ.h  Root.h  Stem.h
test/: test_golden_headless.py  test_rootsystem.rsml
tutorial/chapter1_introduction/: example1_3_helloplant.py
wheelhouse/linux/ubuntu/: index.txt
wheelhouse/macos/: index.txt
